--- a/conference/index.html
+++ b/conference/index.html
@@ -378,7 +378,7 @@
 <li>Investigation of DRT Services by Coupling Demand Modeling and Traffic Flow Simulation - <small>Dennis Harmann, Lasse Bienzeisler, Ronja Meier and Bernhard Friedrich</small></li>
 <li>CDASim: A Versatile Tool for Realistic Cooperative Driving Automation Simulation and Research - <small>Zhitong Huang, Kyle Rush, Danielle Chou, Pavle Bujanovic and Sudhakar Nallamothu</small></li>
 <li>Ingolstadt SUMO 365 – Generation and Calibration of a Microscopic Urban Model for various Scenarios - <small>Joel Brodersen and Christoph Stadler</small></li>
-<li>PROPOSAL FOR A LOW EMISSIONS ZONE IN THE HISTORIC CENTER OF THE CITY OF SAN LUIS POTOSÍ, MEXICO - <small>Missael Quilantan, Valter Barrera and Andres Ruiz</small></li>
+<li>Proposal for a low emissions zone in the historic center of the city of San Luis Potosí, Mexico - <small>Missael Quilantan, Valter Barrera and Andres Ruiz</small></li>
 <li>Development of a 3D Visualization SUMO Tool for Traffic Simulations - <small>Maya Sekeran, Johannes Lindner, Faruk Öztürk, Mathias Pechinger and Klaus Bogenberger</small></li>
 <li>Automated conflict region calculation for intersection control with automated and connected vehicles - <small>Natalie Steinmetz, Tanja Niels and Klaus Bogenberger</small></li>
 <li>Simulation of 'phantom' traffic jams by modeling perception performance in SUMO - <small>Ivan Postigo, Clas Rydergren and Johan Olstam</small></li>
@@ -465,7 +465,7 @@
 <li>Real-time queue estimator for signalised intersections - based on detector data - <small>Maik Halbach and Jan Trumpold</small></li>
 <li>Utilisation of cooperative, automated vehicles with external HMI as part of traffic signal control - <small>Robert Oertel</small></li>
 <li>Machine-learning informed simulation-based dynamic traffic assignment with SUMO - <small>Jonas Jostmann, Gunnar Flötteröd and Zhenliang Ma</small></li>
-<li>MITIGATING URBAN AIR POLLUTION: CASE STUDY OF CALZADA DE GUADALUPE AVENUE IN SAN LUIS POTOSI CITY, MEXICO - <small>Andres Ruiz, Valter Barrera and Missael Quilantan</small></li>
+<li>Mitigating urban air pollution: Case study of Calzada de Guadalupe Avenue in San Luis Potosí city, Mexico - <small>Andres Ruiz, Valter Barrera and Missael Quilantan</small></li>
 <li>Advancing Traffic Safety Simulation: Introducing a Modular Threat Response Model for E-Scooters in SUMO - <small>Pascal Brunner, Florian Denk, Felix Fröhling, Werner Huber, Klaus Bogenberger and Ronald Kates</small></li>
 <li>Maximum Capacity versus Safety for Cyclists - <small>Thomas Obst</small></li>
 <li><i>To be announced</i></li>
@@ -494,7 +494,7 @@
   </tr>
 </tbody>
 </table>
-<small>Last update: 23.04.2024 - 12:16 CEST</small>
+<small>Last update: 24.04.2024 - 15:44 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
