--- a/conference/index.html
+++ b/conference/index.html
@@ -174,95 +174,101 @@
   <br>
   <small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
 </div>
-<h1 id="save-the-date">Save the date!</h1>
-<p>SUMO User Conference 2024: <strong>May 13-15</strong> in Berlin.</p>
-<h1 id="call-for-papers">Call for Papers</h1>
-<p>The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):</p>
-<ul>
-<li>Mobility and Demand Modelling</li>
-<li>Traffic Simulation</li>
-<li>Open Tools and Open Data</li>
-<li>Modelling Urban Mobility</li>
-<li>Traffic Applications</li>
-<li>Traffic Management Solutions</li>
-<li>Intermodal Transport</li>
-<li>Autonomous Driving</li>
-<li>Logistics Simulation</li>
-<li>Vehicular Communication</li>
-<li>E-Mobility</li>
-<li>Reinforcement learning / Machine Learning</li>
-</ul>
-<h1 id="paper-submission">Paper Submission</h1>
-<p>There are two submission types:</p>
-<hr>
-<ol>
-<li>Scientific Papers:
-<ul>
-<li>All accepted scientific papers must be presented at the conference.</li>
-<li>Scientific papers will be reviewed by at least 2 reviewers.</li>
-<li>All accepted scientific papers will be published in the <a href="https://www.tib-op.org/ojs/index.php/scp/index">SUMO proceedings</a>.</li>
-<li><del>Optional: A title and short abstract (up to 300 words) can be submitted until Friday, January 12th, 2024, to get some first feedback.</del></li>
-<li>Scientific papers should be between 5 and 20 pages long.</li>
-<li><del>The Paper must be submitted in LaTeX or Word format before midnight, Friday, February 23rd, 2024.</del></li>
-</ul>
-</li>
-</ol>
+<!--
+# Save the date!
+
+SUMO User Conference 2024: **May 13-15** in Berlin.
+
+# Call for Papers
+
+The conference focuses on presenting new and unique results in the field of mobility simulation and modelling using openly available tools and data. We expect a large variety of research topics and usage approaches. If you are working on a research project fitting the topics below, you are kindly invited to submit an abstract. Possible areas of interest include (but are not limited to):
+
+- Mobility and Demand Modelling
+- Traffic Simulation
+- Open Tools and Open Data
+- Modelling Urban Mobility
+- Traffic Applications
+- Traffic Management Solutions
+- Intermodal Transport
+- Autonomous Driving
+- Logistics Simulation
+- Vehicular Communication
+- E-Mobility
+- Reinforcement learning / Machine Learning
+
+# Paper Submission
+
+There are two submission types:
+
+---
+
+1. Scientific Papers:
+   - All accepted scientific papers must be presented at the conference.
+   - Scientific papers will be reviewed by at least 2 reviewers.
+   - All accepted scientific papers will be published in the [SUMO proceedings](https://www.tib-op.org/ojs/index.php/scp/index).
+   - ~~Optional: A title and short abstract (up to 300 words) can be submitted until Friday, January 12th, 2024, to get some first feedback.~~
+   - Scientific papers should be between 5 and 20 pages long.
+   - ~~The Paper must be submitted in LaTeX or Word format before midnight, Friday, February 23rd, 2024.~~
+
 <div class="alert alert-info" role="alert">
   Authors are required to use the <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/8">Word</a> or <a href="https://www.tib-op.org/ojs/index.php/scp/libraryFiles/downloadPublic/9">LaTeX</a> template provided by TIB Open Publishing.
 </div>
+
 <div class="text-center"><img src="../images/presentation.jpeg" style="width:60%;" alt="Presentation" class="img-responsive"/></div>
-<hr>
+
+---
+
 <br>
-<ol start="2">
-<li>Posters:
-<ul>
-<li>The SUMO conference gives the opportunity to present your topic during the poster session.</li>
-<li>There is no need to write a scientific paper.</li>
-<li>Possible contents can be:
-<ul>
-<li>Results of Bachelor or Master theses</li>
-<li>Live Demos</li>
-<li>SUMO Use Cases</li>
-<li>Project Presentations</li>
-<li>Work in Progress which would benefit from the feedback of other SUMO users</li>
-</ul>
-</li>
-<li>The Posters do not require following a specific template, but should be formatted in the A0 size (841 x 1189 mm / 33.1 x 46.8 in).</li>
-<li>We will print the poster for you, provide the display panel, a chair and a table.</li>
-<li>While changes to the poster are still possible after the submission deadline, we unfortunately will not be able to reprint it. If you do need to make changes, you would need to bring a printout of the updated version with you.</li>
-<li>You are welcome to bring a laptop or other device to show a demo, slides, videos or any material that you deem appropriate to complement the presentation. In this case you will need to provide your own equipment.</li>
-<li><del>Title and a short abstract (up to 300 words) must be submitted until Friday, February 23rd, 2024.</del></li>
-</ul>
-</li>
-</ol>
+
+2. Posters:
+    - The SUMO conference gives the opportunity to present your topic during the poster session.
+    - There is no need to write a scientific paper.
+    - Possible contents can be:
+        - Results of Bachelor or Master theses
+        - Live Demos
+        - SUMO Use Cases
+        - Project Presentations
+        - Work in Progress which would benefit from the feedback of other SUMO users
+    - The Posters do not require following a specific template, but should be formatted in the A0 size (841 x 1189 mm / 33.1 x 46.8 in).
+    - We will print the poster for you, provide the display panel, a chair and a table.
+    - While changes to the poster are still possible after the submission deadline, we unfortunately will not be able to reprint it. If you do need to make changes, you would need to bring a printout of the updated version with you.
+    - You are welcome to bring a laptop or other device to show a demo, slides, videos or any material that you deem appropriate to complement the presentation. In this case you will need to provide your own equipment.
+    - ~~Title and a short abstract (up to 300 words) must be submitted until Friday, February 23rd, 2024.~~
+
 <div class="text-center"><img src="../images/poster_session.jpeg" style="width:60%;" alt="Poster session" class="img-responsive"/></div>
-<hr>
-<h2 id="submission-link">Submission Link</h2>
-<p>Submit Papers and Posters here: <a href="https://www.tib-op.org/ojs/index.php/scp/about/submissions">https://www.tib-op.org/ojs/index.php/scp/about/submissions</a><br>
-<small>Login or register and then click on <b>&ldquo;Make a new Conference Proceedings Submission&rdquo;</b></small>
-<br></p>
+
+---
+
+## Submission Link
+
+Submit Papers and Posters here: https://www.tib-op.org/ojs/index.php/scp/about/submissions<br>
+<small>Login or register and then click on <b>"Make a new Conference Proceedings Submission"</b></small>
+<br>
 <div class="alert alert-warning" role="alert">
   <h6 class="alert-heading">Important notice only for Posters:</h6>
   Please manually prepend <code>(Poster)</code> to the title, in the submission. (e.g. <code><i>(Poster) My current project with SUMO</i></code>)
   <br>
   <img src="../images/poster_sub.png" style="width:100%; margin-top:10px" alt="Example image" class="img-responsive"/>
 </div>
-<h2 id="ethics-and-malpractice-statement">Ethics and Malpractice Statement</h2>
-<p>You can read our <em><a href="../documents/SUMOPublicationEthics.pdf">Publication Ethics and Publication Malpractice Statement</a></em>, where we list the responsibilities of editors, reviewers, and authors.</p>
-<h1 id="important-dates">Important Dates</h1>
-<p>For Papers:</p>
-<ul>
-<li><del>Optional title and abstract submission, until: Friday, January 12th, 2024.</del></li>
-<li><del>Paper submission deadline: Friday, February 23rd, 2024.</del></li>
-<li><del>Notification of acceptance/rejection: <strong>End of March, 2024</strong>.</del></li>
-<li><span class="badge badge-warning">New</span> Camera Ready Paper deadline: <strong>Friday, April 26th, 2024</strong>.</li>
-</ul>
-<p>For Posters:</p>
-<ul>
-<li><del>Mandatory title and abstract submission deadline: Friday, February 23rd, 2024.</del></li>
-<li><del>Notification of acceptance/rejection: <strong>Mid of March, 2024</strong>.</del></li>
-<li><del>Final Poster upload deadline: <strong>Friday, April 12th, 2024</strong>.</del></li>
-</ul>
+
+## Ethics and Malpractice Statement
+
+You can read our *[Publication Ethics and Publication Malpractice Statement](../documents/SUMOPublicationEthics.pdf)*, where we list the responsibilities of editors, reviewers, and authors.
+
+# Important Dates
+
+For Papers:
+- ~~Optional title and abstract submission, until: Friday, January 12th, 2024.~~
+- ~~Paper submission deadline: Friday, February 23rd, 2024.~~
+- ~~Notification of acceptance/rejection: **End of March, 2024**.~~
+- <span class="badge badge-warning">New</span> Camera Ready Paper deadline: **Friday, April 26th, 2024**.
+
+For Posters:
+- ~~Mandatory title and abstract submission deadline: Friday, February 23rd, 2024.~~
+- ~~Notification of acceptance/rejection: **Mid of March, 2024**.~~
+- ~~Final Poster upload deadline: **Friday, April 12th, 2024**.~~
+
+-->
 <h1 id="agenda">Agenda</h1>
 <p><small>🕓 <i>Schedule given in Central European Summer Time (CEST) (UTC+2) - This agenda may be subject to change</i></small></p>
 <table style="border: 2px solid #bbb;">
@@ -579,15 +585,6 @@ Germany</p>
 <br><br><div class="d-none d-md-block"><p class="sidebar-title"><b>What's on this Page</b></p>
 <nav id="TableOfContents">
   <ul>
-    <li><a href="#save-the-date">Save the date!</a></li>
-    <li><a href="#call-for-papers">Call for Papers</a></li>
-    <li><a href="#paper-submission">Paper Submission</a>
-      <ul>
-        <li><a href="#submission-link">Submission Link</a></li>
-        <li><a href="#ethics-and-malpractice-statement">Ethics and Malpractice Statement</a></li>
-      </ul>
-    </li>
-    <li><a href="#important-dates">Important Dates</a></li>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
     <li><a href="#prices">Prices</a></li>
