registration is closed

--- a/conference/index.html
+++ b/conference/index.html
@@ -47,7 +47,7 @@
     
         <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="https://www.eclipse.dev/sumo"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
+            <a class="navbar-brand" href="https://www.eclipse.dev/sumo/"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="menu icon">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -169,12 +169,14 @@
       <!-- https://raw.githubusercontent.com/eclipse-sumo/sumo.website/88c6241d5dc095b7292c5b6068debd3132c6f86e/src/content/conference.md -->
 <div class="text-center"><img src="../images/banner_2024.png" style="width:90%;" alt="Conference artwork" class="img-responsive"/></div>
 <hr>
+<!--
 <div class="alert alert-success" role="alert">
   Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
   <br>
   <small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
 </div>
-<!--
+
+
 # Save the date!
 
 SUMO User Conference 2024: **May 13-15** in Berlin.
@@ -512,25 +514,35 @@ The University of Alabama<br>
 <a href="https://ati.ua.edu/" class="btn btn-sm btn-outline-info" style="margin-top:10px;">Website</a>
 <br><br>
 <p>The talk will begin with a general introduction to the Alabama Transportation Institute (ATI) and its research portfolio. The introduction will provide a historical context for the establishment of ATI and provide an overview of the broad range of human-centered transportation research led and/or facilitated by ATI.  The presentation of ATI research will then focus on the role of simulation in general and eventually touch on recent SUMO-related work. Additionally, the talk will highlight the ATI track record of, and intentions to expand, international collaborations. Ultimately, the talk will provide an understanding of ATI simulation-related and other research priorities going forward as well as provide a case for potential future collaborations.</p>
-<h1 id="prices">Prices</h1>
-<ul>
-<li>Regular Ticket: <strong>495 EUR</strong></li>
-<li>Authors and Project Partners: <strong>275 EUR</strong></li>
-<li>Students: <strong>50 EUR</strong> (limited)</li>
-</ul>
-<p><small>All prices excluding VAT.</small></p>
-<p>Please contact us via email at <a href="mailto:sumo-conference@dlr.de">sumo-conference@dlr.de</a> to request a discount code for student registration.
-The availability is limited.</p>
-<h1 id="registration">Registration</h1>
-<p>Registration is now open: <a href="https://sumo2024.welcome-manager.de/"><a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a></a></p>
-<p><small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small></p>
+<!--
+# Prices
+
+- Regular Ticket: **495 EUR**
+- Authors and Project Partners: **275 EUR**
+- Students: **50 EUR** (limited)
+
+<small>All prices excluding VAT.</small>
+
+Please contact us via email at [sumo-conference@dlr.de](mailto:sumo-conference@dlr.de) to request a discount code for student registration.
+The availability is limited.
+
+# Registration
+
+Registration is now open: <a href="https://sumo2024.welcome-manager.de/">https://sumo2024.welcome-manager.de/</a>
+
+<small><b>Please keep in mind that the registration will close on April 30th, 2024 (at 23:59 CEST).</b></small>
+
 <div class="alert alert-secondary" role="alert">
   <b>Authors:</b> Paper or poster authors are required to register selecting the “Author & Project Partners” category.
 </div>
-<p>The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.</p>
+
+The registration fee includes a two and a half day conference program with refreshments, lunch, proceedings and a social event in the evening. Accommodation is not included within the registration fee and must be pre-booked separately.
+
 <div class="alert alert-info" role="alert">
   <b>Non-EU nationals:</b> Please register well in advance to facilitate internal procedures and (if necessary) ensure a smooth visa application process.
 </div>
+
+-->
 <h1 id="social-event">Social Event</h1>
 <p><strong>Guided tour of the Adlershof Science and Technology Park (on May 13, 2024 - 17:15 - 18:15)</strong></p>
 <p>Guided tour through the Adlershof Science and Technology Park campus, with a focus on the history and development of aviation research at the site, visit to the large wind tunnel, spin tunnel and sound-absorbing engine test stand.</p>
@@ -587,8 +599,6 @@ Germany</p>
   <ul>
     <li><a href="#agenda">Agenda</a></li>
     <li><a href="#keynote">Keynote</a></li>
-    <li><a href="#prices">Prices</a></li>
-    <li><a href="#registration">Registration</a></li>
     <li><a href="#social-event">Social Event</a></li>
     <li><a href="#language">Language</a></li>
     <li><a href="#venue">Venue</a></li>
