updating Presentation title

--- a/conference/index.html
+++ b/conference/index.html
@@ -47,7 +47,7 @@
     
         <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="https://www.eclipse.dev/sumo/"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
+            <a class="navbar-brand" href="https://www.eclipse.dev/sumo"><img class="img-fluid" src="/sumo/images/logos/sumo-logo-white.svg" id="navbar-logo" style="pointer-events:none;" alt="SUMO logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="menu icon">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -407,7 +407,7 @@ For Posters:
     <b>Optimized Design of Low Emission Zones in SUMO: A Dual Focus on Emissions Reduction and Travel Time Improvement</b><br>
     Alvaro Paricio-Garcia, Miguel A. Lopez-Carmona and Pablo Manglano <i><small>(all: Universidad de Alcalá)</small></i>
 <hr>
-    <b>Investigating SUMO’s emission and energy models with real case study</b><br>
+    <b>Comparing and parameterizing the electrical energy consumption models in SUMO</b><br>
     Yun-Pang Flötteröd, Michael Behrisch and Peter Wagner <i><small>(all: DLR)</small></i>
 <hr>
     <b>HybridPy: The Simulation Suite for Mesoscopic and Microscopic Traffic Simulations</b><br>
@@ -502,7 +502,7 @@ For Posters:
   </tr>
 </tbody>
 </table>
-<small>Last update: 24.04.2024 - 15:44 CEST</small>
+<small>Last update: 03.05.2024 - 16:51 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
