--- a/conference/index.html
+++ b/conference/index.html
@@ -328,8 +328,15 @@ For Posters:
   </tr>
 </thead>
 <tbody>
+      <tr>
+    <td align="right">09:00 - 09:15</td>
+    <td>
+    <b>Opening Address</b>
+    <br>Axel Hahn <i><small>Director of the Institute of Transportation Systems - DLR</small></i>
+    </td>
+  </tr>
   <tr>
-    <td align="right">09:00 - 10:30<br><br>Session 1<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Yun-Pang Flötteröd</p></td>
+    <td align="right">09:15 - 10:45<br><br>Session 1<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Yun-Pang Flötteröd</p></td>
 <td>
     <b>Simulating Traffic Networks: Driving SUMO towards digital twins</b><br>
     Axel Schaffland, Jonas Nelson and Julius Schöning <i><small>(all: Hochschule Osnabrück)</small></i>
@@ -342,13 +349,13 @@ For Posters:
 </td>
   </tr>
     <tr>
-    <td align="right">10:30 - 10:45</td>
+    <td align="right">10:45 - 11:00</td>
     <td>
     <i>Coffee Break</i> &#x2615;<br>
     </td>
   </tr>
   <tr>
-    <td align="right">10:45 - 12:15<br><br>Session 2<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Robert Hilbrich</p></td>
+    <td align="right">11:00 - 12:30<br><br>Session 2<br><b>&nbsp;</b><p style="font-size: 60%">Session chair: Robert Hilbrich</p></td>
 <td>
     <b>Sumonity: Bridging SUMO and Unity for Enhanced Traffic Simulation Experiences</b><br>
     Mathias Pechinger and Johannes Lindner <i><small>(all: Technical University of Munich)</small></i>
@@ -502,7 +509,7 @@ For Posters:
   </tr>
 </tbody>
 </table>
-<small>Last update: 03.05.2024 - 16:51 CEST</small>
+<small>Last update: 07.05.2024 - 13:50 CEST</small>
 <h1 id="keynote">Keynote</h1>
 <h3><i>Seeing is believing – Simulation and other Transportation Research at the Alabama Transportation Institute</i></h3>
 <img src="../images/Steven_Jones.jpg" alt="picture of Dr. Steven Jones" style="width:100px; border-radius: 50%; margin-bottom:10px;">
