--- a/conference/index.html
+++ b/conference/index.html
@@ -332,7 +332,7 @@ For Posters:
     <td align="right">09:00 - 09:15</td>
     <td>
     <b>Opening Address</b>
-    <br>Axel Hahn <i><small>Director of the Institute of Transportation Systems - DLR</small></i>
+    <br>Robert Hilbrich <i><small>SUMO Team Lead</small></i>
     </td>
   </tr>
   <tr>
