Interest Group instead of Working Group

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <a href="https://openmobility.eclipse.org"><image src="https://www.eclipse.dev/sumo/images/logos/openMobility-logo.svg" alt="openMobility logo" style="max-width: 250px;"></image></a>
     </div>
     <div class="col-md-9" style="color: #403b3b;">
-      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Working Group</b></a> at the Eclipse Foundation. 
+      The future development and roadmap of SUMO is shaped and fostered by the <a href="https://openmobility.eclipse.org"><b>openMobility Interest Group</b></a> at the Eclipse Foundation. 
         Several partners from industry and academia are working together towards a common mobility simulation platform for industrial applications and academic research.
     </div>
   </div> 
@@ -557,7 +557,7 @@ document.addEventListener('click', clickHandler);
                       <li><a href="https://www.eclipse.dev/sumo/contact">Mailing lists</a></li>
                       <li><a href="https://chat.eclipse.org/#/room/#automotive.sumo:matrix.eclipse.org">Matrix room</a></li>
                       <li><a href="https://www.eclipse.dev/sumo/conference">SUMO User Conference</a></li>
-                      <li><a href="https://openmobility.eclipse.org/">openMobility Working Group</a></li>
+                      <li><a href="https://openmobility.eclipse.org/">openMobility Interest Group</a></li>
                     </ul>
                   </div>
                   <div class="col-md text-left"><b>Support & Training</b>
